--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,6 +27,7 @@ dependencies:
 
   cupertino_icons: ^1.0.2
   firebase_auth: ^3.3.11
+  cloud_firestore: ^3.1.11
 
 dev_dependencies:
   flutter_test:
