--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   firebase_auth: ^3.3.11
   cloud_firestore: ^3.1.11
+  google_fonts: ^2.3.1
 
 dev_dependencies:
   flutter_test:
