--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,6 +29,7 @@ dependencies:
   firebase_auth: ^3.3.11
   cloud_firestore: ^3.1.11
   google_fonts: ^2.3.1
+  settings_ui: ^2.0.2
 
 dev_dependencies:
   flutter_test:
